# kortex

./: .dockerignore  .gitignore  =2.0.0  LICENSE  README.md  activate.sh  add_user_id.sql  add_wait_for_dependencies.sql  build-pdf-test.sh  build.sh  clean.sh  docker-build-offline.sh  docker-compose-local-db.yml  docker-compose-local.yml  docker-compose.pdf-test.yml  docker-compose.yml  docker-offline-setup.md  docker-start-local-build.sh  docker-start-local-db.sh  docker-start-no-buildkit.sh  docker-start-step-by-step.sh  docker-start.sh  docker-stop.sh  fix_imports.sh  fix_routes.sh  pyproject.toml  rebuild-docker.sh  rebuild.sh  requirements.txt  setup-docker-accelerator.sh  start_backend.sh  start_frontend.sh  test_sqlalchemy.py  test_sqlalchemy2.py  test_task_parameters.py
api/: main.py
backend/: .env.example  Dockerfile  Dockerfile.local  add_schedule_fields.sql  fix_models.py  init_database.sh  init_db.py  init_db.sh  init_db.sql  main.py  main_pdf_test.py  main_test.py  pyproject.toml  requirements.txt  run_tests.sh  simple_app.py  simple_app_new.py  simple_init_db.py  start_backend.sh  test_db.py  test_db_connection.py  test_task_creation.py  test_task_parameters.py  verify_db.py
backend/api/: dependencies.py  router.py
backend/core/: config.py  dependencies.py  security.py
backend/database/: base.py  init_db.py  session.py
backend/docs/: architecture.md  architecture_diagram.md  migration_completed.md  migration_plan.md
backend/models/: __init__.py  db_models.py  models.py  schemas.py  simple_models.py
backend/scripts/: add_deepseek_provider.py  (+1 more)
(+140 files in other folders)
