[project]
name = "kortex"
version = "0.1.0"
description = ""
authors = [
    {name = "徐阳波",email = "xybstone@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8,<0.116.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
